# app/Http/Requests/StoreAlunoRequest.php
@@ -28,6 +28,8 @@ class StoreAlunoRequest extends FormRequest
             'address' => ['required', 'string', 'max:255'],
             'email' => ['required', 'string', 'email', 'max:255', 'unique:users'],
             'password' => ['required', 'string', 'min:8', 'confirmed'],
+            'data_feedback_inicio' => 'date',
+            'data_feedback_fim' => 'date',
         ];
     
         return $rules;
